# RustSim

./: README.md
examples/: test_kinematics.py  test_rigidbody.py
physicsengine/: Cargo.toml
physicsengine/src/: fluids.rs  kinematics.rs  lib.rs  nbody.rs  rigid_body.rs
wrapper/: __init__.py  physics.py  test_physics.py
